@@ -1,3 +1,7 @@
+Mon Dec 15 16:52:40 2003  Peter Naulls  <peter@chocky.org>
+	* common/riscosify.c: leaf_len becomes negative in some odd
+	  cases generated by 'make'.  Don't Try to copy leaf then.
+
 Thu Dec 4 22:25:16 2003  David Marston  <david@illudium.org.uk>
 
 	* sys/_jmp.s: Add comment.
